force-app/main/default/objects/SFS_Promo_Product_Setting__mdt/SFS_Promo_Product_Setting__mdt.object-meta.xml
<CustomObject>
    <label>SFS Promo Product Setting</label>
    <pluralLabel>SFS Promo Product Settings</pluralLabel>
</CustomObject>