force-app/main/default/objects/SFS_Promo_Product_Setting__mdt/fields/Allowed_Profiles_for_Button__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Profiles_for_Button__c</fullName>
    <description>Using this to control button access</description>
    <label>Allowed Profiles for Button</label>
    <length>255</length>
    <type>Text</type>
</CustomField>