force-app/main/default/objects/SFS_Promo_Product_Setting__mdt/fields/Evaluation_Order__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Order__c</fullName>
    <label>Evaluation Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>