force-app/main/default/objects/SFS_Promo_Product_Setting__mdt/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <label>Product Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>